<resources>
    <string name="app_name">preference news</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="login_page">BACK</string>
    <string name="register_page">REGISTER</string>
    <string name="log_out">LOG OUT</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="add_new_item">Add new item</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="save">SAVE</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="friend_s_link">Friend\'s Link</string>
    <string name="join_to_list">JOIN TO LIST</string>
    <string name="copy_uid">COPY UID</string>
    <string name="add_item">ADD ITEM</string>
    <string name="delete_item">DELETE ITEM</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="update">Update</string>
    <string name="delete_list">DELETE LIST</string>
    <string name="add_list">ADD LIST</string>
    <string name="my_basket">My Basket</string>
    <string name="my_market_basket_team">My Market Basket Team</string>
    <string name="my_profile">My Profile</string>
    <string name="my_list">My basket</string>
    <string name="home">Home</string>
    <string name="friends_management">Friends management</string>
    <string name="market_lists">Market Lists</string>
    <string name="my_lists">My Lists</string>
    <string name="add_friends">Add friends</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="send_news">SEND NEWS!</string>
    <string name="language">Language</string>
    <string name="telegram_id">Telegram ID</string>
    <string name="categories">Categories</string>
    <string name="platform">Platform</string>
    <string name="platforms">platforms</string>
</resources>