<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="22dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginTop="20dp">

        <AutoCompleteTextView
            android:id="@+id/profile_ACTV_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categories"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Language -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginTop="20dp">

        <AutoCompleteTextView
            android:id="@+id/profile_ACTV_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/language"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginVertical="20dp">

        <AutoCompleteTextView
            android:id="@+id/profile_ACTV_platforms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/platforms"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email (Non-Editable) -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_EDT_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/email"
            android:text=""
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Bot Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_BTN_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorAccent"
        android:text="Connect to Telegram Bot"
        android:textColor="@android:color/white"
        android:padding="12dp" />

    <!-- Save Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_BTN_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

    <!-- Send news Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_BTN_send_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_news" />

</androidx.appcompat.widget.LinearLayoutCompat>
